// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render react react: ClickHere 1`] = `
<div>
  Привет 
  Рубаха
  , нажми 
  <a
    href="#"
  >
    здесь
  </a>
   чтобы продолжить.
</div>
`;

exports[`render react react: Entities 1`] = `
<div
  className="host"
>
  <p
    title="Foo bar"
  >
    <h2>
      Left — Right
    </h2>
  </p>
  <div>
    <div
      className="input text"
    >
      <input
        placeholder="Подсказка: Space — bar"
      />
      <button
        value="Войти"
      />
    </div>
  </div>
  <div>
    Enter:
    <div
      className="input text"
    >
      <input
        placeholder="Подсказка: User‑name"
      />
      <button
        value="Войти"
      />
      JSX-Фрагмент
    </div>
  </div>
</div>
`;

exports[`render react react: Fragment 1`] = `
<div>
  Простой текст
  Фрагмент и 
  <i />
</div>
`;

exports[`render react react: Hello 1`] = `
<div
  className="host"
>
  Привет 
  Рубаха
  -кун!1
</div>
`;

exports[`render react react: Static 1`] = `
<div
  className="host"
>
  Вова, купи "гречу"!
</div>
`;

exports[`render react-composite react-composite: DeepHello (invert) 1`] = `
<div>
  No or 
  <div
    className="host"
  >
    i18n
    , HI!
  </div>
  !
</div>
`;

exports[`render react-composite react-composite: DeepHello 1`] = `
<div>
  <div
    className="host"
  >
    Hi, 
    i18n
    -kun!
  </div>
   or No!
</div>
`;

exports[`render react-composite react-composite: Dialog 1`] = `
<div
  className="host"
>
  <h1>
    Заголовок 
    <i />
     да её и мультилайн, да-да.
  </h1>
  <h3>
    Test "foo" bar
  </h3>
  <form>
    <h2>
       Ох, а вот ещё один мультилайн заголовок. 
    </h2>
    <fieldset>
      <div
        className="row"
        data-key="props"
      >
        <div
          className="col"
        >
          Width:
        </div>
        <div
          className="col"
        >
          123px
        </div>
      </div>
      <div
        className="row"
        data-key="cbx"
      >
        <div
          className="col"
        >
          <input
            checked={true}
            type="checked"
          />
           — YES
        </div>
      </div>
      <div
        data-key="inner"
      >
        Okey 
      </div>
      <p
        data-key="footer"
      >
        <button
          value="Form cancel"
        />
         or 
        <button
          name="save"
          title={undefined}
          type="submit"
          value="Save"
        />
      </p>
    </fieldset>
    <div>
      <div
        title="Footer"
      >
        <button
          name="submit"
          title="Подсказка: 123!"
          type="button"
          value="OK"
        />
        <button
          data-id="рав-текст"
          value="Cancel"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`transform react 1`] = `
"import __jsx from \\"tx-i18n/jsx\\";
import __ from \\"tx-i18n/text\\";
import * as React from 'react';
export const Static = () => (__jsx(\\"Вова, купи&nbsp;\\\\\\"гречу\\\\\\"!\\", [{ type: \\"div\\", props: { className: 'host' } }]));
export const Entities = () => (<div className={'host'}>
		<p title={__(\\"Foo bar\\")}>
			{__jsx(\\"Left &mdash; Right\\", [{ type: \\"h2\\", props: null }])}
		</p>
		<div>
			<Input hint={__(\\"Space — bar\\")} mode={__(\\"text\\")}/>
		</div>
		{__jsx(\\"Enter:<Input1/>\\", [{ type: \\"div\\", props: null }, { type: Input, props: { hint: (), mode: (), descr: <>{__(\\"JSX-Фрагмент\\")}</> } }])}
	</div>);
export const Hello = ({ username }) => (__jsx(\\"Привет {v1}-кун!1\\", [{ type: \\"div\\", props: { className: \`host\` } }, username]));
export const ClickHere = ({ username }) => (__jsx(\\"Привет&nbsp;{v1}, нажми <a2>здесь</a2> чтобы продолжить.\\", [{ type: \\"div\\", props: null }, username, { type: \\"a\\", props: { href: \\"#\\" } }]));
export const Input = ({ hint, mode, descr }) => (<div className={\`input \${mode}\`}>
		
		<input placeholder={__(\\"Подсказка: {v1}\\", [hint])}/>
		<button value={__(\\"Войти\\")}/>
		{descr}
	</div>);
export const InputWithText = ({ hint, mode }) => (__jsx(\\"Представьтесь: <input1/><button2/>\\", [{ type: \\"div\\", props: { className: \`input \${mode}\` } }, { type: \\"input\\", props: { placeholder: __(\\"Подсказка: {v1}\\", [hint]) } }, { type: \\"button\\", props: { value: __(\\"Войти\\") } }]));
export const Fragment = () => (<div>
		<>{__(\\"Простой текст\\")}</>
		{__jsx(\\"Фрагмент и <i1/>\\", [{ type: React.Fragment }, { type: \\"i\\", props: null }])}
	</div>);
"
`;

exports[`transform react-composite 1`] = `
"import __jsx from \\"tx-i18n/jsx\\";
import __ from \\"tx-i18n/text\\";
import * as React from 'react';
import { Hello } from './react';
export const DeepHello = (props) => {
    return __jsx(\\"<Hello1/> или Нет!\\", [{ type: \\"div\\", props: null }, { type: Hello, props: { ...props } }]);
};
export const Button = ({ name, text, hint, primary }) => {
    return <button name={name} value={text} title={hint} type={primary ? __('submit') : __('button')}/>;
};
export const Form = (props) => {
    return (<form>
			{props.children}
			<div>
				{props.controls}
			</div>
		</form>);
};
export class Dialog extends React.Component {
    innerRender(props) {
    }
    render() {
        const { props } = this;
        const text = __(\\"Тест \\\\\\"фу\\\\\\" бар\\");
        return (<div className=\\"host\\">
				{__jsx(\\"Заголовок <i1/> да её и мультилайн, да-да.\\", [{ type: \\"h1\\", props: null }, { type: \\"i\\", props: null }])}
				<h3>{text}</h3>

				<Form controls={<div title={__(\\"Подвал\\")}>
						<Button name={__(\\"submit\\")} text={__(\\"Хорошо\\")} hint={__(\\"Подсказка: {v1}!\\", [123])}/>
						<button value={__(\\"Отмена\\")} data-id={\`рав-текст\`}/>
					</div>}>
					<h2>{__(\` Ох, а вот ещё один мультилайн заголовок. \`)}</h2>
					
					<fieldset>
						<div data-key=\\"props\\" className=\\"row\\">
							<div className=\\"col\\">{__(\\"Ширина:\\", [], \\"form\\")}</div>
							<div className=\\"col\\">123px</div>
						</div>
						<div data-key=\\"cbx\\" className=\\"row\\">
							{__jsx(\\"Да{v1}<input2/>\\", [{ type: \\"div\\", props: { className: \\"col\\" } }, ' ', { type: \\"input\\", props: { type: \\"checked\\", checked: true } }], \\"form\\")}
						</div>
						{__jsx(\\"{v1} Окей\\", [{ type: \\"div\\", props: { \\"data-key\\": \\"inner\\" } }, this.innerRender({ ...props, value: __('Тест', [], \\"form\\") })], \\"form\\")}
						{__jsx(\\"<button1/>или<Button2/>\\", [{ type: \\"p\\", props: { \\"data-key\\": \\"footer\\" } }, { type: \\"button\\", props: { value: __(\\"Отмена\\", [], \\"form\\") } }, { type: Button, props: { name: (), text: (), primary: true } }], \\"form\\")}
					</fieldset>
				</Form>
			</div>);
    }
}
"
`;

exports[`transform react-fragments 1`] = `
"import __ from \\"tx-i18n/text\\";
import * as React from 'react';
export const en = <>{__(\\"Check\\")}</>;
export const ru = <>{__(\\"Проверочка\\")}</>;
export const dict = {
    en: () => ({
        value: <>{__(\\"Hi!\\")}</>,
    }),
    ru: () => ({
        value: <>{__(\\"Привет!\\")}</>,
    }),
    enVal: <>{__(\\"String\\")}</>,
    ruVal: <>{__(\\"Строка\\")}</>,
};
"
`;
